syntax = "proto3";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc MakeFriends (MakeFriendsRequest) returns (EmptyResponse);
}

message GetUserRequest {
  string name = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message MakeFriendsRequest {
  string user1Name = 1;
  string user2Name = 2;
}

message EmptyResponse {}
